// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane Z1 — golden: the Schedule Pro Gantt tab (GanttTab) Android 1000 x 700 (native tablet) renders exactly as before 1`] = `
{
  "lines": 710,
  "sha256": "1bf368c6fd071a7eff60be1399809201d007675c06fc29925b6152c27148e9e3",
}
`;

exports[`lane Z1 — golden: the Schedule Pro Gantt tab (GanttTab) iOS 390 (phone branch) renders exactly as before 1`] = `
{
  "lines": 349,
  "sha256": "33d5259416d320b582991c8252bcea7f929eada97fe91b777d40aa9fc7acd221",
}
`;

exports[`lane Z1 — golden: the Schedule Pro Gantt tab (GanttTab) native 1512 (the Pro canvas on a device that is not a browser) renders exactly as before 1`] = `
{
  "lines": 792,
  "sha256": "95317e9eff04c35503146e8783bc1782a57ae1a16cce28140cda15bd1c43514f",
}
`;

exports[`lane Z1 — golden: the Schedule Pro Gantt tab (GanttTab) web 820 (tablet split, local layout bar) renders exactly as before 1`] = `
{
  "lines": 705,
  "sha256": "a5e0f4cbd3357db779d34025f234141254930cdb1bdd54ec8900e84ea3ec7b31",
}
`;

exports[`lane Z1 — golden: the classic GanttChart Android 820 renders exactly as before 1`] = `
{
  "lines": 123,
  "sha256": "0a4c6e57c4d65f7d7bf08ad64e08dffcc3caa4d289400a5da442593e20814bae",
}
`;

exports[`lane Z1 — golden: the classic GanttChart iOS 390 renders exactly as before 1`] = `
{
  "lines": 123,
  "sha256": "76fa8f41e4c12165114bf7269bae04efcc06f81f86517e352ce5ec820f396666",
}
`;

exports[`lane Z1 — golden: the classic GanttChart native 1512 (viewportWidth 1200) renders exactly as before 1`] = `
{
  "lines": 123,
  "sha256": "5bcb54b377dc94cdf6d91e9897d96dba1d33050a4eccc824835c5ceadde7d135",
}
`;
